--- a/config/system.yaml
+++ b/config/system.yaml
@@ -80,20 +80,20 @@ cache:
   allow_webserver_gzip: false
 twig:
   cache: true
-  debug: false
+  debug: true
   auto_reload: true
   autoescape: false
   undefined_functions: true
   undefined_filters: true
   umask_fix: false
 assets:
-  css_pipeline: true
+  css_pipeline: false
   css_pipeline_include_externals: true
   css_pipeline_before_excludes: true
   css_minify: true
   css_minify_windows: false
   css_rewrite: true
-  js_pipeline: true
+  js_pipeline: false
   js_pipeline_include_externals: true
   js_pipeline_before_excludes: true
   js_minify: true
@@ -104,7 +104,7 @@ errors:
   display: '1'
   log: true
 debugger:
-  enabled: false
+  enabled: true
   shutdown:
     close_connection: true
   twig: true
